--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
 body {
+  font-family: 'Helvetica', Arial, sans-serif;
   margin: 50px;
+}
+article {
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  padding: .5em 2em;
 }
